# kr-stock-analyst

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  pyproject.toml  railway.json
app/: __init__.py  bootstrap.py  cli.py  config.py  db.py  main.py  mcp_app.py  mcp_server.py  meta.py  models.py  repository.py  schemas.py
app/collectors/: briefing.py  dart.py  disclosures.py  ecos.py  krx.py  macro.py  naver_flows.py  naver_quotes.py  news.py  research.py  stock_snapshots.py
app/integrations/: opendart.py  toss.py
app/services/: briefing.py  company_briefs.py  company_profiles.py  kis_realtime.py  local_stock_ai.py  market_impact.py  market_rankings.py  quant_signals.py  (+9 more)
docs/: insight_foundation.md  playmcp-registration-checklist.md  railway-local-deploy-runbook.md
scripts/: railway_bootstrap_after_login.sh
tests/: test_app.py  test_briefing.py  test_briefing_runtime.py  test_cli_mcp.py  test_cli_railway_env.py  test_cli_railway_readiness.py  test_company_profiles.py  test_dart_financials.py  test_db.py  test_disclosures.py  test_live_stock_quote.py  test_local_stock_ai.py  test_macro_collector.py  test_market_impact.py  test_market_rankings.py  test_mcp_app.py  test_mcp_server.py  test_naver_flows.py  test_news.py  test_prices.py  test_quant_signals.py  test_recommendations.py  test_research.py  test_stock_ai_analysis.py  test_stock_dashboard_disclosures.py  test_stock_dashboard_sentiment.py  test_stock_detail_v3.py  test_stock_universe_data.py  test_toss.py  test_trends.py  test_us_market.py  test_web_push.py  test_x_feed.py
(+19 files in other folders)
