[project]
name = "kr-stock-analyst-backend"
version = "0.1.0"
description = "Domestic stock analyst data backend for Korea equities."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.2",
    "pykrx>=1.0.48",
    "finance-datareader>=0.9.202",
    "certifi>=2026.6.17",
    "setuptools<81",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]
mcp = [
    "mcp>=1.28.1,<2",
]

[project.scripts]
analyst = "app.cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
